--- a/styles/get_involved.css
+++ b/styles/get_involved.css
@@ -360,6 +360,7 @@ div.support {
   width: 100%;
   background-color: var(--light-grey);
   margin-bottom: 16px;
+  padding-bottom: 16px;
 }
 div.support p {
   width: 90%;
@@ -373,7 +374,7 @@ div.support p {
   color: #fff;
   font-size: 1.125rem;
   text-align: center;
-  border-radius: 0 15px 0 15px;
+  border-radius: 0 25px;
   display: flex;
   flex-direction: column;
 }
@@ -381,7 +382,6 @@ div.support p {
   font-family: var(--proxima);
   font-weight: bold;
   text-transform: capitalize;
-  padding-top: 16px;
   margin: 16px 0;
 }
 p.button {
@@ -412,6 +412,7 @@ p.button {
 }
 section.newsletter {
   width: 90%;
+  margin: 0 auto;
   height: 150px;
   display: flex;
   flex-direction: column;
