--- a/styles/get_involved.css
+++ b/styles/get_involved.css
@@ -416,6 +416,7 @@ section.newsletter {
   height: 150px;
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: flex-end;
   /* background-color: green; */
 }
@@ -426,7 +427,8 @@ section.newsletter {
   font-weight: bold;
   text-transform: capitalize;
   text-align: left;
-  max-width: 328px;
+  min-width: 328px;
+  max-width: 400px;
   padding-top: 16px;
   margin: 0;
 }
@@ -673,6 +675,7 @@ h6 {
   }
   h2 {
     font-size: 1.875rem;
+    margin-bottom: 16px;
   }
   section.main-content {
     font-size: 1.25rem;
@@ -684,6 +687,7 @@ h6 {
     align-items: baseline;
     justify-content: center;
     gap: 64px;
+    padding-top: 12px;
   }
   .get-in-touch p {
     font-size: 1.5rem;
@@ -704,12 +708,15 @@ h6 {
     /* background-color: green; */
   }
   .newsletter p {
-    font-size: 1.125rem;
-    max-width: 400px;
+    min-width: 33%;
+    font-size: 1.25rem;
+    text-transform: uppercase;
     margin-bottom: 16px;
+    margin-left: 10%;
   }
   form.newsletter {
     height: 60px;
+    margin-left: 10%;
   }
   #newsletter {
     font-size: 1.125rem;
